Fix toList()